// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Shopify/> Detail should render a detail view 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Shopify
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      href="/app/settings/integrations/shopify/"
    >
      App Details
    </a>
    <a
      class="link"
      href="/app/settings/integrations/shopify/connections"
    >
      Connections
    </a>
  </nav>
  <header
    class="hero"
  >
    <img
      alt="Shopify's logo"
      class="heroImage"
      src="/assets/img/integrations/shopify.png"
    />
    <div>
      <h1
        class="heroHeading"
      >
        Shopify
      </h1>
      <p
        class="heroDescription"
      >
        Automate basic queries, display customer profiles, manage orders, and drive sales without switching tabs.
      </p>
      <div
        class="heroMeta"
      >
        <div
          class="ui-badge-badge-0cf8 badge ui-badge-uppercase-0cf8"
          data-color="grey"
          data-corner="round"
          data-name="badge"
          data-type="grey"
        >
          ECOMMERCE
        </div>
        <span
          class="by"
        >
          by
           
          <a
            href="https://www.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Gorgias
          </a>
        </span>
      </div>
    </div>
  </header>
  <main
    class="main"
  >
    <section>
      <div
        class="longDescription"
      >
        <h2>
          About
        </h2>
        <div>
          
            
          <p>
            Instantly connect to Shopify in under a minute to have customer and order history at your agents’ fingertips. Here are the things you can do with Shopify integration:
          </p>
          
            
          <ul>
            
                
            <li>
              
                    
              <strong>
                Stop asking for information you already have.
              </strong>
              <br />
              
                    View your customer’s order history as you close out their ticket to ensure speed and accuracy. No more switching between tabs or cutting and pasting
                    
              <br />
              <br />
              
                
            </li>
            
                
            <li>
              
                    
              <strong>
                Actual personalization at scale.
              </strong>
              <br />
              
                    We make it easy to insert customer data provided by Shopify. From first name to shipping address, directly into each customer interaction. It’s an automatic and accurate way to get a more personal customer experience.
                    
              <br />
              <br />
              
                
            </li>
            
                
            <li>
              
                    
              <strong>
                Update Shopify orders directly from your helpdesk.
              </strong>
              <br />
              
                    Update a shipping address or even issue a partial refund from directly within Gorgias. You can even create and send a draft order without opening a new tab or window.
                    
              <br />
              <br />
              
                
            </li>
            
                
            <li>
              
                    
              <strong>
                Automate your most common tasks.
              </strong>
              <br />
              
                    From looking up the most recent orders to sending out an update to some of your most common questions, we make it easy to automate up to 20% of your customer support tasks.
                    
              <br />
              <br />
              
                
            </li>
            
                
            <li>
              
                    
              <strong>
                Detect the intent of what your customers are asking.
              </strong>
              <br />
              
                    Gorgias uses advanced machine learning to detect the intents and sentiments of each message. By learning about tracking updates, return policies, and urgency, we help you set priorities and categorize tickets based on what they’re about.
                
            </li>
            
            
          </ul>
        </div>
      </div>
      <ul
        class="screenshotList"
      >
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 1 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/shopify-1.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 2 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/shopify-2.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 3 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/shopify-3.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 4 of things this products allows you to do in Gorgias"
            class="screenshot"
            src="/assets/img/integrations/screenshots/shopify-4.png"
          />
        </li>
      </ul>
    </section>
    <div
      class="infoCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="actionWrapper"
        >
          <a
            class="connectButtonWrapper"
            href="https://apps.shopify.com/helpdesk"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              aria-disabled="false"
              class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
              data-name="button"
              data-rac=""
              data-react-aria-pressable="true"
              id="react-aria-:r0:"
              tabindex="0"
              type="button"
            >
              <div
                class="ui-button-surface-a432"
              >
                <span
                  class="ui-button-content-a432"
                >
                  <span
                    class="typography-bold-md ui-text-text-d239"
                    data-name="text"
                    style="text-align: left; text-wrap: nowrap;"
                  >
                    <strong>
                      Connect 
                      shopify
                    </strong>
                  </span>
                </span>
              </div>
            </button>
          </a>
        </div>
        <h2
          class="categoryTitle cardTitle"
        >
          Pricing
        </h2>
        <ul
          class="cardList"
        >
          <li>
            Contact Gorgias for pricing details.
          </li>
          <li>
            <a
              class="actionLink"
              href="https://www.shopify.com/pricing"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                attach_money
              </i>
              See pricing details
            </a>
          </li>
        </ul>
        <h2
          class="categoryTitle cardTitle"
        >
          Resources
        </h2>
        <ul
          class="cardList"
        >
          <li>
            <a
              class="actionLink"
              href="https://docs.gorgias.com/ecommerce-integrations/shopify"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                description
              </i>
              Documentation
            </a>
          </li>
          <li>
            <a
              class="actionLink"
              href="https://www.shopify.com/legal/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                privacy_tip
              </i>
              Privacy Policy
            </a>
          </li>
        </ul>
      </div>
    </div>
  </main>
</div>
`;

exports[`<Shopify/> Integration should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations/shopify/connections"
          >
            Shopify
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert loading mb-4"
        >
          <div
            class="iconContainer"
          >
            <span
              class="loadingIcon"
            >
              <svg
                class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-dark-fc79 ui-loadingspinner-small-fc79"
                data-name="loading-spinner"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
              >
                <circle
                  class="ui-loadingspinner-dot-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="ui-loadingspinner-circle-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </span>
          </div>
          <div
            class="content"
          >
            <span
              class="label"
            >
              Import in progress. We typically sync 3,000 customers an hour. We will send you an email once it is done. Feel free to leave this page.
            </span>
          </div>
        </div>
        <form>
          <label
            class="ui-label-label-a11c ui-label-isdisabled-a11c mb-2"
            for="disabled-store-field"
          >
            Store name
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <div
              class="wrapper left isDisabled isNested"
            >
              <input
                class="input"
                data-resizable="false"
                disabled=""
                id="disabled-store-field"
                name="store-name"
                type="text"
                value=""
              />
            </div>
            <span
              class="groupAddon right isDisabled"
            >
              .myshopify.com
            </span>
          </span>
          <div
            class="mb-4"
          >
            <div>
              <label
                aria-checked="true"
                class="ui-label-label-a11c ui-togglefield-label-9b7c"
                role="switch"
              >
                <input
                  checked=""
                  class="ui-togglefield-input-9b7c"
                  disabled=""
                  name="sync_customer_notes"
                  type="checkbox"
                />
                <div
                  class="ui-togglefield-slider-9b7c"
                />
                <div>
                  Synchronize customer notes between Gorgias and Shopify
                  <div
                    class="ui-fieldcaption-caption-1f94"
                    data-name="field-caption"
                  >
                    When editing notes in both places at the same time, the first one saved will be synchronized.
                    <br />
                    Notes will not be synchronized for customers who are associated with more than one Shopify store.
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="mb-4"
          >
            <div>
              <label
                aria-checked="false"
                class="ui-label-label-a11c ui-togglefield-label-9b7c"
                role="switch"
              >
                <input
                  class="ui-togglefield-input-9b7c"
                  disabled=""
                  name="default_address_phone_matching_enabled"
                  type="checkbox"
                />
                <div
                  class="ui-togglefield-slider-9b7c"
                />
                <div>
                  Match customer by Shopify default address phone number
                  <div
                    class="ui-fieldcaption-caption-1f94"
                    data-name="field-caption"
                  >
                    Gorgias will search for Shopify customer’s default address for customer matching.
                    <br />
                    <b>
                      Do not enable if you use the same phone number across multiple customers
                    </b>
                    , as this will lead to incorrect customer merges.
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            data-name="box"
            style="justify-content: space-between; display: flex;"
          >
            <div
              data-name="box"
              style="display: flex; gap: 12px;"
            >
              <button
                aria-disabled="true"
                class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                data-disabled="true"
                data-name="button"
                data-rac=""
                data-react-aria-pressable="true"
                disabled=""
                id="react-aria-:r2:"
                type="button"
              >
                <div
                  class="ui-button-surface-a432"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    <span
                      class="typography-bold-md ui-text-text-d239"
                      data-name="text"
                      style="text-align: left; text-wrap: nowrap;"
                    >
                      <strong>
                        Update Connection
                      </strong>
                    </span>
                  </span>
                </div>
              </button>
            </div>
            <button
              aria-disabled="false"
              class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
              id="integration-deletion-confirm-button"
              type="button"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486"
              >
                delete
              </i>
              <span
                class="ui-button-content-cef1"
              >
                Delete App
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shopify/> List should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Shopify
        </li>
      </ol>
    </nav>
    <div>
      <a
        class="connectButtonWrapper"
        href="https://apps.shopify.com/helpdesk"
        rel="noopener noreferrer"
        target="_blank"
      >
        <button
          aria-disabled="false"
          class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
          data-name="button"
          data-rac=""
          data-react-aria-pressable="true"
          id="react-aria-:r4:"
          tabindex="0"
          type="button"
        >
          <div
            class="ui-button-surface-a432"
          >
            <span
              class="ui-button-content-a432"
            >
              <span
                class="typography-bold-md ui-text-text-d239"
                data-name="text"
                style="text-align: left; text-wrap: nowrap;"
              >
                <strong>
                  Connect 
                  shopify
                </strong>
              </span>
            </span>
          </div>
        </button>
      </a>
    </div>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      href="/app/settings/integrations/shopify/"
    >
      App Details
    </a>
    <a
      class="link"
      href="/app/settings/integrations/shopify/connections"
    >
      Connections
    </a>
  </nav>
  <ul
    class="list"
  >
    <li
      class="listItem"
    >
      <a
        class="link"
        href="/app/settings/integrations/shopify/1"
      >
        <span>
          myShop1
        </span>
        <i
          class="material-icons md-3"
        >
          keyboard_arrow_right
        </i>
      </a>
    </li>
  </ul>
</div>
`;
